Fixed spacing on mobile

--- a/wp-content/themes/ahnstrompyk/sass/pages/_index-page.scss
+++ b/wp-content/themes/ahnstrompyk/sass/pages/_index-page.scss
@@ -12,6 +12,9 @@
       display: block;
     }
     margin-top: 40px;
+    @include single-column {
+      margin-top: 10px;
+    }
     .image-text {
       position: relative;
       p {
